ispCP ω 1.0.4 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-02-15 Benedikt Heintel
	- CONFIGS:
		* Fixed #2210: FreeBSD: Propose new start/stop script
	- GUI:
		* Fixed #2208: Little design error (part 5)	

2010-02-11 Benedikt Heintel
	- GUI:
		* Fixed #2159: Reseller can update to small hosting plan even if client use more resources
		* Fixed #2204: Little design error (part 4)
		* Replaced all "SVN: $ID$" by "SVN: $Id$"

2010-02-10 Laurent Declercq
	- GUI:
		* Fixed #2205: Fonts in ispcp.css is very big
	- ENGINE:
		* Fixed possible "Use of uninitialized value..." in store_conf() subroutine when a setting is set to an empty value
	- SETUP:
		* Fixed #2140: Validate DEFAULT_ADMIN_ADDRESS before installation/update
		* Added recovery process for configuration settings in update process

2010-02-10 Marc Pujol
	- ENGINE:
		* Fixed #2203: ispCP Autoreply infinite autoreplies loop

2010-02-09 Laurent Declercq
- GUI:
	* Ehancement:
		- Added JQuery v1.4.1 library (both format: full and minify - Only minify is loaded by client's browser)
		- Added JQuery ispCPtooltips plugin (both format: full and minify - Only minify is loaded by client's browser)
		- Added a new javascript function in the ispcp .js-files to handle JQuery XMLHttpRequest errors
	* admin/reseller_edit.php and related template:
		* Fixed #2188: Reseller update properties - Inconsistency between...
		* Re-factoring the code for better readability
		* Removed unnecessary checks
		* Added pre-check on the first load to prevent inconstancy data during update process
		* Fixed vertical alignment for password generation button
		* Ehancement:
			- Added input fields hightlighting on error(s) (Todo, switch to JQuery form validation for better performances)
			- Added cached input values on error
			- Added 'Cancel' button to abort the update process
			- Added JavaScript events for the rollover effect of several input elements (submit, button)
			- The password generation is performed via XMLHttpRequest now