@@ -214,7 +214,7 @@ safe_mode_protected_env_vars = LD_LIBRARY_PATH
 ;       see /usr/share/doc/php5-common/README.Debian.security
 ;
 
-open_basedir = "{WWW_DIR}/{DMN_NAME}/:{CONF_DIR}/:{MR_LOCK_FILE}:/proc/:/bin/df:/bin/mount:{RKHUNTER_LOG}:{CHKROOTKIT_LOG}:{PEAR_DIR}/{OTHER_ROOTKIT_LOG}"
+open_basedir = "{WWW_DIR}/{DMN_NAME}/:{CONF_DIR}/:{MR_LOCK_FILE}:/var/run/dmesg.boot:/proc/:/bin/df:/bin/mount:{RKHUNTER_LOG}:{CHKROOTKIT_LOG}:{PEAR_DIR}:{OTHER_ROOTKIT_LOG}"
 
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names. This directive is
