@@ -1,4 +1,4 @@
-ispCP ω (OMEGA) HowTo Install for FreeBSD
+ispCP ω (OMEGA) HowTo Install for FreeBSD 8.0
 ================================================================================
 For other Linux distributions please check the other INSTALL files.
 ================================================================================
@@ -66,41 +66,90 @@ and Name Server rndc.key has been setup.
 	# rehash
 	# portmaster $(cat ./docs/FreeBSD/freebsd-packages)
 
-	Apache22 Options
+	apache 2.2.11_3 Options
 
 	x threads       option
  	x mysql         option
- 	x suexec        ( Recomended )
- 	+ mod_cband     for bandwitdh management
- 	o mod_php       WARNING: security risk for hosting
- 	+ mod_fastcgi   ( choice for improving security )
-	+ mod_fcgid     ( choice for improving security )
- 	+ mod_proxy     for awstats
+ 	x IPV6
+ 	x BDB
+ 	x AUTH_BASIC
+ 	x AUTH_DIGEST
+ 	x AUTHN_FILE
+ 	x AUTHN_DBD
+ 	x AUTHN_DBM
+ 	x AUTHN_ANON
+ 	x AUTHN_DEFAULT
+ 	x AUTHN_ALIAS
+ 	x AUTHZ_HOST
+ 	x AUTHZ_GROUPFILE
+ 	x AUTHZ_USER
+ 	x AUTHZ_DBM
+ 	x AUTHZ_OWNER
+ 	x AUTHZ_DEFAULT
+ 	x CACHE
+ 	x DISK_CACHE
+ 	x FILE_CACHE
+ 	x ACTIONS
+ 	x ALIAS
+ 	x ASIS
+ 	x AUTOINDEX
+ 	x CERN_LDAP
+ 	Y DBD
+ 	x DEFLATE
+ 	x DIR
+ 	x DUMPIO
+ 	x ENV
+ 	x EXPIRES
+ 	x HEADERS
+ 	x INFO
+ 	x LOG_CONFIG
+ 	x LOGIO
+ 	x MIME
+ 	x MIME_MAGIC
+ 	x NEGOTIATION
+ 	x REWRITE
+ 	x SETENVIF
+ 	x SPELING
+ 	x STATUS
+ 	x UNIQUE_ID
+ 	x USERDIR
+ 	x USERTRACK
+ 	x VHOST_ALIAS
+ 	x FILTER
+ 	x VERSION
+ 	x PROXY
+ 	x SSL
+ 	x SUEXEC
 
-	Proftpd Options
+	proftpd 1.3.2 Options
 
-	x IPV6          IP v6 support ( but disable by ispCP )
-	x mysql         Database module
-	x quota         quota module
-	x ratio         ratio module
-	x ctrls         control module
-	- delay         Not Available in ports ?
-	- ctrls_admin   Not Available in ports ?
+	x CTRLS
+	x IFSESSION
+	x IPV6
+	x MYSQL
+	x NLS
+	x OPENSSL
+	x QUOTA
+	x RATIO
+	x README
+	x REWRITE
+	x WRAP
 
-	courier-imap Options
+	courier-imap 4.4.1,2 Options
 
-	x userdb        For use with userdb ( ispCP default )
-	x mysql         For use with mysql
+	x IPV6
+	x AUTH_MYQL
+	x AUTH_USERDB
 
-	courier-authlib Options
+	courier-authlib 0.62.1 Options
 
-	x userdb
-	x mysql
+	x AUTH_MYQL
+	x AUTH_USERDB
 
 	Perl Options
 
 	+ Compress-Zlib
-	+ Crypt-Blowfish
+ 	+ Crypt-Blowfish
 	+ Crypt-CBC
 	+ Crypt-DES
 	+ Crypt-PasswdMD5
@@ -113,6 +162,7 @@ and Name Server rndc.key has been setup.
 	+ HTML-Tagset
 	+ HTTP-GHTTP
 	+ IO-stringy
+	+ libwww
 	+ MIME-tools
 	+ Mail-Tools
 	+ Net-DNS
@@ -121,54 +171,88 @@ and Name Server rndc.key has been setup.
 	+ Net-LibIDN
 	+ PlRPC
 	+ URI
-	+ libwww
 	+ Term-ReadPassword
+	
+	postfix 2.5.6,1 Options
+	
+	x PCRE
+	
+	p5-Net-DNS 0.65 Options
+	
+	x IPV6
 
-	PHP5 Options
+	PHP5 5.2.8 Options
 
-	x apache
 	x CLI
 	x CGI
-	x suhosin
-	+ fastcgi
+	x APACHE
+	x SUHOSIN
+	x IPV6
+	x FASTCGI
+	x PATHINFO	
 
-	PHP5-Extensions Options
+	PHP5-Extensions 1.2 Options
 
-	x pcre
-	x bz2
-	x ctype
-	x curl
-	x dbx
-	x domxml
-	x filepro
-	x gd
-	x imap
-	x mcrypt
-	x mhash
-	x mysql
-	x pear
-	x shmop
-	x xmlrpc
-	x xslt
-	x session
-	x php5-pdo_mysql
+	x BZ2
+	x CTYPE
+	x CURL
+	x DBA
+	x DOM
+	x FILEINFO
+	x FILTER
+	x FTP
+	x GD
+	x HASH
+	x ICONV
+	x IMAP
+	x JSON
+	x MBSTRING
+	x MCRYPT
+	x MHASH
+	x MYSQL
+	x PDO
+	x PDO_SQLITE
+	x POSIX
+	x SESSION
+	x SHMOP
+	x SIMPLEXML
+	x SOAP
+	x SOCKET
+	x SPL
+	x SQLITE
+	x TOKENIZER
+	x XML
+	x XMLREADER
+	x XMLRPC
+	x XMLWRITER
+	x ZIP
 
 4. Configure the system.
 	# cpan upgrade
 	# cpan DBI DBD::mysql MIME::Entity MIME::Parser Crypt::CBC Crypt::Blowfish Crypt::PasswdMD5 Term::ReadPassword
 
     Edit /etc/rc.conf and add
-	sendmail_enable="NONE"
-	postfix_enable="YES"
+
 	proftpd_enable="YES"
-	policyd_weight_enable="YES"
 	mysql_enable="YES"
+	apache22_http_accept_enable="YES"
 	apache22_enable="YES"
 	courier_authdaemond_enable="YES"
 	courier_imap_imapd_enable="YES"
 	courier_imap_imapd_ssl_enable="NO"
 	courier_imap_pop3d_enable="YES"
-	courier_imap_pop3d_ssl_enable="NO"
+	courier_imap_pop3d_ssl_enable="YES"
+	
+	postfix_enable="YES"
+	policyd_weight_enable="YES"
+	postgrey_enable="YES"
+	spamd_enable="YES"
+	
+	# Disable because of Postfix.
+	sendmail_enable="NO"
+	sendmail_submit_enable="NO"
+	sendmail_outbound_enable="NO"
+	sendmail_msp_queue_enable="NO"
 
 4. (optional) Check the ispcp.conf and adapt it to your requirements.
 
@@ -185,10 +269,10 @@ and Name Server rndc.key has been setup.
 	# /usr/local/bin/mysql_install_db
 	# chown -R mysql /var/db/mysql/
 	# /usr/local/etc/rc.d/mysql-server start
-	# mysqladmin -u root password YOUR_PASSWORD
+	# mysqladmin -u root password 'YOUR_PASSWORD'
 
 9. Start the engine setup:
-	# perl ispcp-setup
+	# perl ./ispcp-setup
 
 10. Install ispCP ω step-by-step
 
@@ -199,27 +283,41 @@ and Name Server rndc.key has been setup.
 	# rm -fR /tmp/ispcp
 
 12. Load Apache modules
-    Edit /usr/local/etc/apache22/httpd.conf and add for FCGId
+    Edit /usr/local/etc/apache22/httpd.conf and add for FCGId:
 	LoadModule fcgid_module libexec/apache22/mod_fcgid.so
 	Include etc/apache22/extra/fcgid_ispcp.conf
 
-    or for FastCGI
+    or for FastCGI:
 	LoadModule fcgid_module libexec/apache22/mod_fastcgi.so
 	Include etc/apache22/extra/fastcgi_ispcp.conf
+	
+	Add a '#' to the php5_module:
+	# LoadModule php5_module libexec/apache22/libphp5.so
+	
+13. Log into ispCP and change 
+	"Settings"->"Server Ports" "POSTGREY Port" to 10023.
+	
+14. Change smtpd.conf
+	File /usr/local/etc/sasl2/smtpd.conf must look like:
+	pwcheck_method: auxprop
+	auxprop_plugin: sasldb
+	mech_list: PLAIN LOGIN CRAM-MD5 DIGEST-MD5
 
+	If postfix runs chrooted, you'll have to set a link to 
+	/var/spool/postfix/usr/local/etc/sasldb2.db
 
 WARNING:
-          DEFAULT setting is using mod_php not fastcgi or mod_fcgid !!
-          The configuration is customised for use with apache 2.2.x version
-          using suexec module enable.
+	DEFAULT setting is using mod_php not fastcgi or mod_fcgid !!
+    The configuration is customised for use with apache 2.2.x version using
+    suexec module enable.
 UNDER JAIL:
-          dont forget to modified postfix, prepared for chroot system
-          for mod_fcgid, at master /etc/rc.conf, set jail_sysvipc_allow to YES
+    Don't forget to modified postfix, prepared for chroot system for mod_fcgid,
+    at master /etc/rc.conf, set jail_sysvipc_allow to YES
 
- ================================================================================
+================================================================================
 5) Update
 ---------
-NOTE: ispCP ω can only be updated from 1.0.0, 1.0.1 or 1.0.2. If you have a
+NOTE: ispCP ω can only be updated from post 1.0.0. If you have a
 version prior 1.0.0 (final release) installed, update to ispCP ω 1.0.0 first.
 
 Make sure you are logged in as root and MySQL is running.
@@ -248,8 +346,7 @@ Make sure you are logged in as root and MySQL is running.
 	# cp -v /usr/local/www/ispcp/gui/tools/pma/config.inc.php /tmp/ispcp/usr/local/www/ispcp/gui/tools/pma/
 	# cp -v /var/www/ispcp/gui/tools/webmail/data/* /tmp/ispcp/var/www/ispcp/gui/tools/webmail/data/
 
-. Delete old files to avoid security risks:
-	# rm -fR /usr/local/www/ispcp/engine/messager/
+7. Delete old files to avoid security risks:
 	# rm -fR /usr/local/www/ispcp/gui/admin/
 	# rm -fR /usr/local/www/ispcp/gui/client/
 	# rm -fR /usr/local/www/ispcp/gui/include/
@@ -258,27 +355,26 @@ Make sure you are logged in as root and MySQL is running.
 	# rm -fR /usr/local/www/ispcp/gui/reseller/
 	# rm -f /usr/local/www/ispcp/gui/*.php
 
-
-7. Copy /usr and /var directories into your system (you may make backups)
+8. Copy /usr and /var directories into your system (you may make backups)
 	# cp -Rv /tmp/ispcp/usr/* /usr/
 	# cp -Rv /tmp/ispcp/var/* /var/
 
-8. Backup ispcp.conf and copy the /etc directory into your system (you may make backups):
+9. Backup ispcp.conf and copy the /etc directory into your system (you may make backups):
 	# mv -v /etc/ispcp/ispcp.conf /etc/ispcp/ispcp.old.conf
 	# cp -Rv /tmp/ispcp/etc/* /etc/
 
-9. Now it's time to update your installation. Change into the engine directory:
+10. Now it's time to update your installation. Change into the engine directory:
 	# cd /var/www/ispcp/engine/setup
 
-10. Start the engine update:
+11. Start the engine update:
 	# perl ispcp-update
 
-11. Update ispCP ω step-by-step
+12. Update ispCP ω step-by-step
 
 	If you get no error, all went good; if you get one, look at
 	http://isp-control.net to solve the problem.
 
-12. Clean the temporary folders:
+13. Clean the temporary folders:
 	# rm -fR /tmp/ispcp/
 
 ================================================================================
