@@ -157,7 +157,7 @@ Note: For all questions, answer "a" (trust always).
 ================================================================================
 6) Update
 ---------
-NOTE: ispCP ω can only be updated from 1.0.0, 1.0.1 or 1.0.2. If you have a
+NOTE: ispCP ω can only be updated from post 1.0.0. If you have a
 version prior 1.0.0 (final release) installed, update to ispCP ω 1.0.0 first.
 
 Make sure you are logged in as root and MySQL is running.
